...
        color: Theme.of(context).colorScheme.tertiary,
        borderRadius: BorderRadius.circular(
          BorderStyles.smallBorderRadiusValue,
        ),
      ),
      child: Text(
        'NEW',
        style: TextStyle(
          color: Theme.of(context).colorScheme.onTertiary,
          fontWeight: FontWeight.bold,
          fontSize: 11,
          letterSpacing: 0.5,
        ),
...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text("Today's Words"),
        centerTitle: true,
        automaticallyImplyLeading: true,
      ),
      body: Column(
        crossAxisAlignment: CrossAxisAlignment.stretch,
        children: [
...
