...
    return "Selected $selectedWordsCount words";
  }

  String _appBarTitle() {
    return _isCheckboxModeEnabled
        ? _multiselectAppBarTitle()
        : "Words and collections";
  }

  Widget _buildPage(BuildContext context) {
    if (isLoading) {
      return const Center(child: CircularProgressIndicator());
    }
...
